<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".InfoFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:elevation="10dp"
        android:layout_margin="7dp"
        android:layout_height="100dp"
        app:cardCornerRadius="10dp"
        >
        <LinearLayout
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/countryName"
                android:gravity="center_vertical"
                android:textColor="#000000"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:id="@+id/countryNameCard"
                />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:elevation="10dp"
        android:layout_margin="7dp"
        android:layout_height="200dp"
        app:cardCornerRadius="10dp"
        >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/countryFlagTitle"
                android:textColor="#000000"
                android:gravity="center_vertical"
                android:layout_weight="2"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/app_name"
                android:layout_gravity="center"
                android:id="@+id/countryFlagCard"
                />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:elevation="10dp"
            android:layout_margin="7dp"
            android:layout_height="100dp"
            app:cardCornerRadius="10dp"
            >
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/countryAnthemTitle"
                android:gravity="center_vertical"
                android:textColor="#000000"
                android:layout_weight="1"/>

            <ImageView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/playAudio"
                android:src="@drawable/ic_play_audio"
                />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:elevation="10dp"
            android:layout_margin="7dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            >
            <LinearLayout
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/countryDescription"
                    android:gravity="center_vertical"
                    android:textColor="#000000"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="7dp"
                    android:id="@+id/countryDescriptionCard"
                    />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:elevation="10dp"
            android:layout_margin="7dp"
            android:layout_height="100dp"
            app:cardCornerRadius="10dp"
            >
            <LinearLayout
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/countrySurface"
                    android:gravity="center_vertical"
                    android:textColor="#000000"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:id="@+id/countryAreaCard"
                    />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:elevation="10dp"
            android:layout_margin="7dp"
            android:layout_height="100dp"
            app:cardCornerRadius="10dp"
            >
            <LinearLayout
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/countryPopulation"
                    android:gravity="center_vertical"
                    android:textColor="#000000"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:id="@+id/countryPopulationCard"
                    />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:elevation="10dp"
            android:layout_margin="7dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            >
            <LinearLayout
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/countryPeople"
                    android:gravity="center_vertical"
                    android:textColor="#000000"
                    />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/peopleRecycle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </androidx.recyclerview.widget.RecyclerView>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:elevation="10dp"
            android:layout_margin="7dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            >
            <LinearLayout
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/countryResource"
                    android:gravity="center_vertical"
                    android:textColor="#000000"
                    />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/resourceRecycle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </androidx.recyclerview.widget.RecyclerView>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>